--- a/transform_html.ipynb
+++ b/transform_html.ipynb
@@ -41,28 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00, 338.07it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "error formatting last updated docs/index.html list index out of range\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 2/2 [00:00<00:00, 230.81it/s]\n"
      ]
     }
    ],
@@ -71,8 +57,8 @@
     "    try:    \n",
     "        with open(file,\"r\") as f:\n",
     "            soup = bs4.BeautifulSoup(f.read(),features=\"lxml\")\n",
-    "            p = soup.select(\".dateGenerated > small\")[0]\n",
-    "            p.string = f\"Last updated on {p.string.split('on')[1]}\"\n",
+    "            p = soup.select(\".dateGenerated\")[0]\n",
+    "            p.string = f\"Last updated on {p.text.strip().split('on')[1]}\"\n",
     "        with open(file,\"w\") as f:    \n",
     "            f.write(str(soup))\n",
     "    except Exception as e:\n",
@@ -81,34 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleting footers\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Deleting footers\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 881/881 [00:05<00:00, 171.72it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#files = chain(glob.glob(\"docs/*/*.html\"), glob.glob(\"docs/*.html\"))\n",
     "files = list(glob.glob(\"docs/*/*.html\"))\n",
@@ -127,24 +97,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fixing Titles\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Fixing Titles\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,17 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 406/406 [00:03<00:00, 114.07it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for file in tqdm.tqdm(file_path):\n",
     "    try:    \n",
